--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@11ty/eleventy": "^0.9.0",
+    "markdown-it": "^10.0.0",
     "markdown-it-attrs": "^3.0.1",
     "moment": "^2.24.0"
   },
