--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@11ty/eleventy": "^0.9.0",
     "markdown-it": "^10.0.0",
     "markdown-it-attrs": "^3.0.1",
+    "markdown-it-implicit-figures": "^0.9.0",
     "moment": "^2.24.0"
   },
   "devDependencies": {
