new post and prevNext

--- a/_source/everyday-ideas/everyday-ideas.json
+++ b/_source/everyday-ideas/everyday-ideas.json
@@ -1,4 +1,5 @@
 {
+  "currentCollection": "everyday ideas",
   "permalink": "articles/everyday-ideas/{{ page.date | dateslug }}-{{ title | slug }}/index.html",
   "tags": [
     "everyday ideas"
