--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@11ty/eleventy": "^0.11.0",
     "dotenv": "^8.2.0",
     "markdown-it": "^10.0.0",
+    "markdown-it-abbr": "^1.0.4",
     "markdown-it-attrs": "^3.0.1",
+    "markdown-it-footnote": "^3.0.2",
     "markdown-it-implicit-figures": "^0.9.0",
     "moment": "^2.24.0"
   },
